feat: add travel plan management